Добавлен класс Branch Добавлен класс BranchGenerator для создания объектов класса Branch В Employee добавлено поле branch_id В EmployeeDataBaseManager добавлена работа с Branch В EmployeeGenerator добавлена работа с Branch, добавлен BranchManager В EmployeeQueryManager добавлен метод вызывающий количество сотрудников по филиалам В Main добавлена работа с Branch В Role добавлен BranchManager(метод Work необходимо переделать)